samples/_failures_safe/1761462499_aa7236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55542909.c: In function ‘main’:
./samples/SAFE/__tmp_55542909.c:163:5: error: expected expression at end of input
  163 |     if (len >
      |     ^~
./samples/SAFE/__tmp_55542909.c:163:5: error: expected declaration or statement at end of input
